text-alignment fix

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -58,6 +58,7 @@
 }
 
 .archive__item-excerpt {
+  text-align: justify;
   margin-top: 0;
   font-size: $type-size-6;
 
